# cord

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: benchmarks.yml  ci.yml  release.yml
benches/: performance.rs
benchmarks/: data.js
cord-derive/: Cargo.toml
cord-derive/src/: lib.rs
src/: de.rs  dynamic.rs  encode.rs  lib.rs  private.rs  result.rs  schema.rs  ser.rs  types.rs  value.rs  varint.rs  width.rs  wire.rs
