[package]
name = "cord"
version = "2.0.0"
description = "Canonical serialization format designed for security"
edition = "2021"
publish = true
license = "Apache-2.0"
repository = "https://github.com/backbone-hq/cord"
authors = ["Backbone Authors <root@backbone.dev>"]
keywords = [
  "security",
  "serialization",
  "cryptography",
  "marshalling",
  "canonicalization",
]
categories = ["encoding", "cryptography"]
readme = "README.md"
rust-version = "1.71"

[workspace]
members = ["cord-derive"]
resolver = "2"

[dependencies]
cord-derive = { path = "cord-derive", version = "=2.0.0" }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", optional = true }
thiserror = "1.0.30"
unicode-normalization = "0.1"
num-bigint = { version = "0.4", optional = true }
num-integer = { version = "0.1", optional = true }
uuid = { version = ">=1.8, <1.21", optional = true }
sha3 = { version = "0.10", optional = true }

[features]
default = ["datetime", "decimal", "uuid"]
datetime = ["chrono"]
decimal = ["num-bigint", "num-integer"]
uuid = ["dep:uuid"]
hash = ["sha3"]

[dev-dependencies]
integer-encoding = "3.0.3"
